feat: home page implementation

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <title>Studio Ana Rodry</title>
   </head>
 
-  <body class="bg-secondary-50">
+  <body class="bg-white" x-data="state">
     <!-- LOADING -->
     <div
       id="loading"
@@ -42,7 +42,180 @@
           <span></span>
         </div>
       </div>
-    </div>   
-     
+    </div>
+    <!-- HEADER -->
+    <header id="" class="menu-nav--blur bg-white select-none fixed z-30 w-full">
+      <nav
+        class="container z-10 mx-auto flex items-center justify-between max-w-7xl p-6 lg:px-8"
+        aria-label="Global"
+      >
+        <div class="flex lg:flex-1">
+          <a href="#" class="-m-1.5 p-1.5">
+            <img class="h-8 w-auto" src="/assets/img/logo.png" alt="" />
+          </a>
+        </div>
+
+        <div class="flex lg:hidden">
+          <button
+            x-on:click="menuSideBar = true"
+            type="button"
+            class="-m-2.5 inline-flex items center justify-center rounded-md p-2.5 text-surface-900"
+          >
+            <span class="sr-only">Open main menu</span>
+
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-6 w-6"
+              fill="currentColor"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              aria-hidden="true"
+            >
+              <path
+                d="M16 18V20H5V18H16ZM21 11V13H3V11H21ZM19 4V6H8V4H19Z"
+              ></path>
+            </svg>
+          </button>
+        </div>
+
+        <div class="hidden lg:flex lg:gap-x-12">
+          <a
+            href="/#inicio"
+            class="font-poppins text-md font-semibold text-surface-900 hover:text-secondary-800 leading-6 text-gray-900"
+            >Início</a
+          >
+          <a
+            href="/#nossos-servicos"
+            class="font-poppins text-md font-semibold text-surface-900 hover:text-secondary-800 leading-6 text-gray-900"
+            >Nossos Serviços</a
+          >
+          <a
+            href="/#precos"
+            class="font-poppins text-md font-semibold text-surface-900 hover:text-secondary-800 leading-6 text-gray-900"
+            >Preços</a
+          >
+          <a
+            href="/#contato"
+            class="font-poppins text-md font-semibold text-surface-900 hover:text-secondary-800 leading-6 text-gray-900"
+            >Contato</a
+          >
+        </div>
+      </nav>
+
+      <!-- Mobile menu, show/hide based on menu open state. -->
+      <div
+        :class="`lg:hidden ${menuSideBar ? '' : 'hidden'}`"
+        role="dialog"
+        aria-modal="true"
+      >
+        <!-- MENU MOBILE -->
+        <div
+          class="fixed inset-y-0 right-0 z-10 w-full overflow-y-auto bg-white sm:max-w-sm sm:ring-1 sm:ring-surface-100"
+        >
+          <div class="container">
+            <div class="flex h-20 -mx-3 px-6 items-center justify-between">
+              <a href="#" class="ml-0.5">
+                <img
+                  class="h-8 w-auto"
+                  src="/assets/img/logo.png"
+                  alt=""
+                />
+              </a>
+              <button
+                x-on:click="menuSideBar = false"
+                type="button"
+                class="rounded-md text-surface-900"
+              >
+                <span class="sr-only">Close menu</span>
+                <svg
+                  class="h-6 w-6"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  aria-hidden="true"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M6 18L18 6M6 6l12 12"
+                  />
+                </svg>
+              </button>
+            </div>
+            
+
+            <div class="px-6 flow-root">
+              <div class="-my-6 divide-y divide-surface-100">
+                <div class="space-y-2 py-6">
+                  <a
+                    href="/#inicio"
+                    x-on:click="menuSideBar = false"
+                    class="font-poppins -mx-3 block rounded-lg py-2 text-base font-semibold leading-7 text-surface-900 hover:bg-gray-50"
+                    >Início</a
+                  >
+                  <a
+                    href="#nossos-servicos"
+                    x-on:click="menuSideBar = false"
+                    class="font-poppins -mx-3 block rounded-lg py-2 text-base font-semibold leading-7 text-surface-900 hover:bg-gray-50"
+                    >Nossos Serviços</a
+                  >
+                  <a
+                    href="/#precos"
+                    x-on:click="menuSideBar = false"
+                    class="font-poppins -mx-3 block rounded-lg py-2 text-base font-semibold leading-7 text-surface-900 hover:bg-gray-50"
+                    >Preços</a
+                  >
+                  <a
+                    href="/#contato"
+                    x-on:click="menuSideBar = false"
+                    class="font-poppins -mx-3 block rounded-lg py-2 text-base font-semibold leading-7 text-surface-900 hover:bg-gray-50"
+                    >Contato</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>          
+        </div>
+      </div>
+    </header>
+    <!-- /HEADER -->
+
+    <!-- BANNER -->
+    <div
+      id="inicio"
+      class="h-[90vh] banner"
+    >
+      <div class="bg-secondary-50 bg-opacity-50 flex items-center h-full">
+        <div
+          class="container mx-auto lg:flex lg:flex-col max-w-7xl items-left md:items-center p-6 lg:px-8 text-primary-500"
+        >
+          <h1 class="text-6xl md:text-8xl font-nautigal">Ana Rodrigues</h1>
+          <p class="mt-4 pr-40 md:pr-72 lg:pr-0 font-poppins lg:text-center text-surface-900">
+            Realçando a sua beleza, da cabeça aos pés, com paixão e perfeição!
+          </p>
+          <a
+            href="https://www.instagram.com/studioanarodry/"
+            target="_blank"
+            class="inline-flex items-left justify-center bg-secondary-800 mt-8 px-3 py-2 rounded-md hover:ring ring-opacity-50 ring-secondary-800"
+          >
+            <div class="text-surface-50 font-poppins font-semibold">
+              Agende agora
+            </div>
+
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="ml-2 h-6 w-6"
+              viewBox="0 0 24 24"
+            >
+              <path
+                d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z"
+                fill="rgba(255,255,255,1)"
+              ></path>
+            </svg>
+          </a>
+        </div>
+      </div>
+    </div>    
   </body>
 </html>
