--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
         </div>
       </div>
     </div>
+    <!-- /LOADING -->
+
     <!-- HEADER -->
     <header id="" class="menu-nav--blur bg-white select-none fixed z-30 w-full">
       <nav
@@ -115,11 +117,7 @@
           <div class="container">
             <div class="flex h-20 -mx-3 px-6 items-center justify-between">
               <a href="#" class="ml-0.5">
-                <img
-                  class="h-8 w-auto"
-                  src="/assets/img/logo.png"
-                  alt=""
-                />
+                <img class="h-8 w-auto" src="/assets/img/logo.png" alt="" />
               </a>
               <button
                 x-on:click="menuSideBar = false"
@@ -143,7 +141,6 @@
                 </svg>
               </button>
             </div>
-            
 
             <div class="px-6 flow-root">
               <div class="-my-6 divide-y divide-surface-100">
@@ -175,23 +172,22 @@
                 </div>
               </div>
             </div>
-          </div>          
+          </div>
         </div>
       </div>
     </header>
     <!-- /HEADER -->
 
     <!-- BANNER -->
-    <div
-      id="inicio"
-      class="h-[90vh] banner"
-    >
+    <div id="inicio" class="h-[90vh] banner">
       <div class="bg-secondary-50 bg-opacity-50 flex items-center h-full">
         <div
           class="container mx-auto lg:flex lg:flex-col max-w-7xl items-left md:items-center p-6 lg:px-8 text-primary-500"
         >
           <h1 class="text-6xl md:text-8xl font-nautigal">Ana Rodrigues</h1>
-          <p class="mt-4 pr-40 md:pr-72 lg:pr-0 font-poppins lg:text-center text-surface-900">
+          <p
+            class="mt-4 pr-40 md:pr-72 lg:pr-0 font-poppins lg:text-center text-surface-900"
+          >
             Realçando a sua beleza, da cabeça aos pés, com paixão e perfeição!
           </p>
           <a
@@ -216,6 +212,42 @@
           </a>
         </div>
       </div>
-    </div>    
+    </div>
+    <!-- /BANNER -->
+
+    <!-- OUR SERVICES -->
+    <section id="nossos-servicos">
+      <div class="container section flex flex-col items-center max-w-7xl">
+        <h2 class="text-center font-poppins text-3xl text-primary-500">
+          Nossos Serviços
+        </h2>
+        <div class="flex items-center">
+          <p class="mt-4 md:w-[37.5rem] lg:w-[56rem] text-center">
+            Do cabelo às unhas e ao olhar, oferecemos serviços de primeira
+            classe para transformar e realçar sua beleza. Venha se reinventar
+            conosco!
+          </p>
+        </div>
+
+        <!-- IMAGE -->
+        <div
+          class="container xl:grid xl:grid-cols-3 xl:gap-8 xl:gap-16 md:h-45 space-y-6 xl:space-y-0 mt-16"
+        >
+          <template x-for="service in services">
+            <div class="flex flex-col mx-auto w-60 lg:w-80">
+              <img :src="service.img" class="rounded-md" />
+              <h3
+                x-text="service.title"
+                class="font-poppins text-secondary-800 mt-6 text-center font-semibold"
+              ></h3>
+              <p x-text="service.description" class="text-center mt-2"></p>
+            </div>
+          </template>
+        </div>
+        <!-- /IMAGE -->
+      </div>
+    </section>
+    <!-- /OUR SERVICES -->
+  
   </body>
 </html>
