--- a/index.html
+++ b/index.html
@@ -207,7 +207,9 @@
     <!-- OUR SERVICES -->
     <section id="nossos-servicos">
       <div class="container section flex flex-col items-center max-w-7xl">
-        <h2 class="text-center font-poppins font-semibold text-3xl text-primary-500">
+        <h2
+          class="text-center font-poppins font-semibold text-3xl text-primary-500"
+        >
           Nossos Serviços
         </h2>
         <div class="flex items-center">
@@ -315,5 +317,54 @@
       </div>
     </section>
     <!-- /OUR SERVICES -->
+
+    <!-- CONTACT -->
+    <section id="contato" class="pt-[8rem]">
+      <div
+        class="mx-auto h-80 w-full bg-cover bg-fixed bg-center bg-no-repeat"
+        style="
+          background-image: url('https://images.unsplash.com/photo-1522336284037-91f7da073525?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1469&q=80');
+        "
+      >
+        <div
+          class="flex flex-col items-center justify-center w-full h-full bg-white bg-opacity-70"
+        >
+          <h2
+            class="text-secondary-800 font-poppins font-semibold text-3xl text-center"
+          >
+            Entre em contato agora
+          </h2>
+
+          <div class="flex flex-row gap-8 font-poppins font-semibold text-white">
+            <a
+              href="#"
+              target="_blank"
+              class="bg-secondary-800 inline-flex items-left justify-center mt-8 px-3 py-2 rounded-md hover:ring ring-opacity-50 ring-secondary-800"
+            >
+              <h1>WhatsApp</h1>
+              <img
+                src="/assets/img/icon/ic_whatsapp.svg"
+                class="w-6 ms-2"
+                alt=""
+              />
+            </a>
+
+            <a
+              href="https://www.instagram.com/studioanarodry/"
+              target="_blank"
+              class="bg-secondary-800 inline-flex items-left justify-center mt-8 px-3 py-2 rounded-md hover:ring ring-opacity-50 ring-secondary-800"
+            >
+              <h1>Instagram</h1>
+              <img
+                src="/assets/img/icon/ic_instagram.svg"
+                class="w-6 ms-2"
+                alt=""
+              />
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /CONTACT -->
   </body>
 </html>
