feat: contact section

--- a/index.html
+++ b/index.html
@@ -347,6 +347,69 @@
       </div>
     </section>
     <!-- /GALLERY -->
+
+    <!-- CONTACT -->
+    <section id="contato" class="container section -mt-[48px]">
+      <h1
+        class="text-center font-poppins font-semibold text-3xl text-primary-500"
+      >
+        Entre em Contato
+      </h1>
+
+      <div
+        class="container xl:grid xl:grid-cols-3 xl:gap-8 md:h-45 space-y-6 xl:space-y-0 xl:mt-16"
+      >
+        <!-- LOCAL -->
+        <div class="flex flex-col items-center">
+          <img class="h-16 xl:h-24 mt-16" src="/assets/img/icon/ic_local.svg" alt="" />
+
+          <p class="mt-6 font-semibold">Conheça nosso espaço</p>
+          <p class="mt-4 text-secondary-800">
+            Rua João Lopes Araújo | Salomão - BA
+          </p>
+        </div>
+        <!-- /LOCAL -->
+
+        <!-- WHATSAPP -->
+        <div class="flex flex-col items-center">
+          <img
+            class="h-16 xl:h-24 mt-16"
+            src="/assets/img/icon/ic_whatsapp.svg"
+            alt=""
+          />
+
+          <p class="mt-6 font-semibold">Agende seu horário</p>
+          <a
+            href="https://api.whatsapp.com/send?phone=5573982333148&text=Ol%C3%A1,%20Paula!%0AGostaria%20de%20marcar%20um%20hor%C3%A1rio."
+            target="_blank"
+            class="button mt-4"
+          >
+            WhatsApp
+          </a>
+        </div>
+        <!-- /WHATSAPP -->
+
+        <!-- INSTAGRAM -->
+        <div class="flex flex-col items-center">
+          <img
+            class="h-16 xl:h-24 mt-16"
+            src="/assets/img/icon/ic_instagram.svg"
+            alt=""
+          />
+
+          <p class="mt-6 font-semibold">Conheça mais de nosso trabalho</p>
+          <a
+            href="https://www.instagram.com/studioanarodry/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA=="
+            target="_blank"
+            class="button mt-4"
+          >
+            Instagram
+          </a>
+        </div>
+        <!-- /INSTAGRAM -->
+      </div>
+    </section>
+    <!-- /CONTACT -->
   </body>
   <script src="/assets/js/index.js"></script>
 </html>
