fix: fixing imports[2]

--- a/index.html
+++ b/index.html
@@ -82,22 +82,22 @@
         <div class="hidden lg:flex lg:gap-x-12">
           <a
             href="/#inicio"
-            class="font-poppins text-md font-semibold text-surface-900 hover:text-secondary-800 leading-6 text-gray-900"
+            class="text-md font-semibold text-surface-900 hover:text-secondary-800 leading-6 text-gray-900"
             >Início</a
           >
           <a
             href="/#nossos-servicos"
-            class="font-poppins text-md font-semibold text-surface-900 hover:text-secondary-800 leading-6 text-gray-900"
+            class="text-md font-semibold text-surface-900 hover:text-secondary-800 leading-6 text-gray-900"
             >Nossos Serviços</a
           >
           <a
             href="/#galeria"
-            class="font-poppins text-md font-semibold text-surface-900 hover:text-secondary-800 leading-6 text-gray-900"
+            class="text-md font-semibold text-surface-900 hover:text-secondary-800 leading-6 text-gray-900"
             >Galeria</a
           >
           <a
             href="/#contato"
-            class="font-poppins text-md font-semibold text-surface-900 hover:text-secondary-800 leading-6 text-gray-900"
+            class="text-md font-semibold text-surface-900 hover:text-secondary-800 leading-6 text-gray-900"
             >Contato</a
           >
         </div>
@@ -147,25 +147,25 @@
                   <a
                     href="/#inicio"
                     x-on:click="menuSideBar = false"
-                    class="font-poppins -mx-3 block rounded-lg py-2 text-base font-semibold leading-7 text-surface-900 hover:bg-gray-50"
+                    class="-mx-3 block rounded-lg py-2 text-base font-semibold leading-7 text-surface-900 hover:bg-gray-50"
                     >Início</a
                   >
                   <a
                     href="#nossos-servicos"
                     x-on:click="menuSideBar = false"
-                    class="font-poppins -mx-3 block rounded-lg py-2 text-base font-semibold leading-7 text-surface-900 hover:bg-gray-50"
+                    class="-mx-3 block rounded-lg py-2 text-base font-semibold leading-7 text-surface-900 hover:bg-gray-50"
                     >Nossos Serviços</a
                   >
                   <a
                     href="/#galeria"
                     x-on:click="menuSideBar = false"
-                    class="font-poppins -mx-3 block rounded-lg py-2 text-base font-semibold leading-7 text-surface-900 hover:bg-gray-50"
+                    class="-mx-3 block rounded-lg py-2 text-base font-semibold leading-7 text-surface-900 hover:bg-gray-50"
                     >Galeria</a
                   >
                   <a
                     href="/#contato"
                     x-on:click="menuSideBar = false"
-                    class="font-poppins -mx-3 block rounded-lg py-2 text-base font-semibold leading-7 text-surface-900 hover:bg-gray-50"
+                    class="-mx-3 block rounded-lg py-2 text-base font-semibold leading-7 text-surface-900 hover:bg-gray-50"
                     >Contato</a
                   >
                 </div>
@@ -185,7 +185,7 @@
         >
           <h1 class="text-6xl md:text-8xl font-nautigal">Ana Rodrigues</h1>
           <p
-            class="mt-4 pr-40 md:pr-72 lg:pr-0 font-poppins lg:text-center text-surface-900"
+            class="mt-4 pr-40 md:pr-72 lg:pr-0 lg:text-center text-surface-900"
           >
             Realçando a sua beleza, da cabeça aos pés, com paixão e perfeição!
           </p>
@@ -200,7 +200,7 @@
     <section id="nossos-servicos">
       <div class="container section flex flex-col items-center max-w-7xl">
         <h1
-          class="text-center font-poppins font-semibold text-3xl text-primary-500"
+          class="text-center font-semibold text-3xl text-primary-500"
         >
           Nossos Serviços
         </h1>
@@ -224,7 +224,7 @@
               />
               <h3
                 x-text="service.title"
-                class="font-poppins text-secondary-800 mt-6 text-center font-semibold"
+                class="text-secondary-800 mt-6 text-center font-semibold"
               ></h3>
               <p x-text="service.description" class="text-center mt-2"></p>
             </div>
@@ -238,7 +238,7 @@
           x-data="{ activeTab: 'tab1' }"
         >
           <ul
-            class="bg-secondary-500 px-8 md:px-24 py-6 flex justify-between items-center rounded-t-md font-poppins font-medium"
+            class="bg-secondary-500 px-8 md:px-24 py-6 flex justify-between items-center rounded-t-md font-medium"
           >
             <li class="">
               <a
@@ -343,7 +343,7 @@
     <!-- CONTACT -->
     <section id="contato" class="container section -mt-[48px]">
       <h1
-        class="text-center font-poppins font-semibold text-3xl text-primary-500"
+        class="text-center font-semibold text-3xl text-primary-500"
       >
         Entre em Contato
       </h1>
@@ -360,7 +360,7 @@
           />
 
           <p class="mt-6 font-semibold">Conheça nosso espaço</p>
-          <p class="mt-4 text-secondary-800">
+          <p class="mt-4 text-sm text-secondary-800">
             Rua João Lopes Araújo | Salomão - BA
           </p>
         </div>
@@ -409,7 +409,7 @@
 
     <!-- FOOTER -->
     <footer
-      class="w-full mt-[8rem] bg-secondary-50 p-7 text-center text-secondary-800 font-poppins text-sm"
+      class="w-full mt-[8rem] bg-secondary-50 p-7 text-center text-secondary-800 text-sm"
     >
       <span
         >©
